# smol-voxel-world

./: .gitignore  Cargo.toml
shaders/: common.hlsl  generate_rays.hlsl  trace_primary_rays.hlsl
shaders/common/: camera.hlsl  random.hlsl  trace.hlsl
shaders/debug_renders/: complexity.hlsl  depth.hlsl  normals.hlsl  ray_direction.hlsl
src/: camera.rs  constants.rs  helpers.rs  key_mapping.rs  main.rs  primary_ray_caster.rs  smol_voxel_world.rs
src/compute_passes/: camera.rs  mod.rs  primary_ray_caster.rs
src/io/: mod.rs
src/world/: asset.rs  mod.rs  voxelized.rs
