[package]
name = "smol_voxel_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dolly = "0.4"
log = "0.4"
fern = "0.6"
chrono = "0.4"
cogrrs = { path = "../CoGrRs" }
anyhow = "1.0"
glam = { version = "0.24", features = ["bytemuck", "serde"] }
bytemuck = "1.13"
lz4_flex = { version = "0.11" }
bvh = { version = "0.7" }
tobj = { version = "4.0" }
serde = "1.0"
serde_cbor = { version = "0.11" }
